--- a/CountingFunction/CountingFunction.csproj
+++ b/CountingFunction/CountingFunction.csproj
@@ -55,7 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\FunctionsInfoViewModel.cs" />
     <Compile Include="ViewModel\FunctionsViewModel.cs" />
+    <Compile Include="ViewModel\ResultViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
